# ha-cosori-kettle

./: .gitignore  AGENTS.md  LIBRARY.md  Makefile  Makefile.test  PROTOCOL.md  README.md  TODO.md  cosori-kettle-example.yaml  cosori-kettle.build.yaml  hacs.json  pyproject.toml  scan.py  test_cpp.cpp  test_state.cpp
.github/workflows/: ci.yml
components/cosori_kettle_ble/: __init__.py  binary_sensor.py  button.py  cosori_kettle_ble.cpp  cosori_kettle_ble.h  cosori_kettle_state.cpp  cosori_kettle_state.h  cosori_kettle_state_log.h  envelope.cpp  envelope.h  number.py  protocol.cpp  protocol.h  sensor.py  switch.py
cosori_kettle/: README.md  __init__.py  cli.py  client.py  command_fsm.py  kettle.py  protocol.py  state.py
custom_components/cosori_kettle_ble/: README.md  __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  protocol.py  sensor.py  strings.json  switch.py
custom_components/cosori_kettle_ble/cosori_kettle/: README.md  __init__.py  client.py  kettle.py  protocol.py  pyproject.toml
custom_components/cosori_kettle_ble/translations/: en.json
examples/: interactive.py  simple.py
tests/: test_client.py  test_climate.py  test_coordinator.py  test_cpp.cpp  test_kettle.py  test_number.py  test_protocol.py  test_registration.py
tests/ha_component/: README.md  __init__.py  conftest.py  test_protocol.py
