[project]
name = "cosorikettleble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "esphome>=2025.12.3",
    "pip>=25.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/ha_component"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
